fix(compat): select is broken in display entries

--- a/www/ui/templates/display-entry.css
+++ b/www/ui/templates/display-entry.css
@@ -25,6 +25,10 @@
         font-family: inherit;
     }
 
+    select {
+        -webkit-appearance: none;
+    }
+
     hr {
         border-style: dashed;
         border-color: var(--text-color);
